# using_plugin_demo

./: CMakeLists.txt  README.md  main.cpp  main.qml
myPlugin/: CMakeLists.txt  mycustomitem.cpp  mycustomitem.h  myplugin.cpp  myplugin.h  qmldir  src.qrc
